--- a/SOFI/SOFI.csproj
+++ b/SOFI/SOFI.csproj
@@ -15,8 +15,7 @@
     <AssemblyName>SOFI</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
-    <IISExpressSSLPort>
-    </IISExpressSSLPort>
+    <IISExpressSSLPort>44376</IISExpressSSLPort>
     <IISExpressAnonymousAuthentication>enabled</IISExpressAnonymousAuthentication>
     <IISExpressWindowsAuthentication>disabled</IISExpressWindowsAuthentication>
     <IISExpressUseClassicPipelineMode />
@@ -62,26 +61,19 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\ATT2007.mdb" />
-    <Content Include="asign_estatus.aspx" />
     <Content Include="busq_esp.aspx" />
     <Content Include="estilos.css" />
     <Content Include="images\logo1.png" />
     <Content Include="images\SOFI.jpg" />
+    <Content Include="asign_estatus.aspx" />
     <Content Include="inasis_diaria.aspx" />
-    <Content Include="inicio.aspx" />
     <Content Include="inasis_quincenal.aspx" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="inicio.aspx" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="asign_estatus.aspx.cs">
-      <DependentUpon>asign_estatus.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="asign_estatus.aspx.designer.cs">
-      <DependentUpon>asign_estatus.aspx</DependentUpon>
-    </Compile>
     <Compile Include="ATT2007DataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -94,19 +86,19 @@
     <Compile Include="busq_esp.aspx.designer.cs">
       <DependentUpon>busq_esp.aspx</DependentUpon>
     </Compile>
+    <Compile Include="asign_estatus.aspx.cs">
+      <DependentUpon>asign_estatus.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="asign_estatus.aspx.designer.cs">
+      <DependentUpon>asign_estatus.aspx</DependentUpon>
+    </Compile>
     <Compile Include="inasis_diaria.aspx.cs">
       <DependentUpon>inasis_diaria.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="inasis_diaria.aspx.designer.cs">
       <DependentUpon>inasis_diaria.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="inicio.aspx.cs">
-      <DependentUpon>inicio.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="inicio.aspx.designer.cs">
-      <DependentUpon>inicio.aspx</DependentUpon>
     </Compile>
     <Compile Include="inasis_quincenal.aspx.cs">
       <DependentUpon>inasis_quincenal.aspx</DependentUpon>
@@ -116,6 +108,20 @@
       <DependentUpon>inasis_quincenal.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Site1.Master.cs">
+      <DependentUpon>Site1.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Site1.Master.designer.cs">
+      <DependentUpon>Site1.Master</DependentUpon>
+    </Compile>
+    <Compile Include="inicio.aspx.cs">
+      <DependentUpon>inicio.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="inicio.aspx.designer.cs">
+      <DependentUpon>inicio.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="ATT2007DataSet.xsc">
@@ -133,6 +139,7 @@
     <None Include="Properties\PublishProfiles\servidor_de_aplicaciones.pubxml" />
     <None Include="Properties\PublishProfiles\sof-i.pubxml" />
     <None Include="Properties\PublishProfiles\sofi.pubxml" />
+    <Content Include="Site1.Master" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
