--- a/SOFI/SOFI.csproj
+++ b/SOFI/SOFI.csproj
@@ -63,15 +63,28 @@
     <Content Include="App_Data\ATT2007.mdb" />
     <Content Include="busq_esp.aspx" />
     <Content Include="estilos.css" />
+    <Content Include="images\01.jpg" />
     <Content Include="images\logo1.png" />
     <Content Include="images\SOFI.jpg" />
     <Content Include="asign_estatus.aspx" />
     <Content Include="inasis_diaria.aspx" />
     <Content Include="inasis_quincenal.aspx" />
+    <Content Include="inicio.aspx" />
+    <Content Include="layout\scripts\index.html" />
+    <Content Include="layout\scripts\jquery.backtotop.js" />
+    <Content Include="layout\scripts\jquery.min.js" />
+    <Content Include="layout\scripts\jquery.mobilemenu.js" />
+    <Content Include="layout\scripts\jquery.placeholder.min.js" />
+    <Content Include="layout\styles\fontawesome-4.5.0.min.css" />
+    <Content Include="layout\styles\fonts\fontawesome-webfont.svg" />
+    <Content Include="layout\styles\fonts\index.html" />
+    <Content Include="layout\styles\framework.css" />
+    <Content Include="layout\styles\index.html" />
+    <Content Include="layout\styles\layout.css" />
+    <Content Include="login.aspx" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
-    <Content Include="inicio.aspx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ATT2007DataSet.Designer.cs">
@@ -107,6 +120,27 @@
     <Compile Include="inasis_quincenal.aspx.designer.cs">
       <DependentUpon>inasis_quincenal.aspx</DependentUpon>
     </Compile>
+    <Compile Include="inicio.aspx.cs">
+      <DependentUpon>inicio.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="inicio.aspx.designer.cs">
+      <DependentUpon>inicio.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="inicio1.Master.cs">
+      <DependentUpon>inicio1.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="inicio1.Master.designer.cs">
+      <DependentUpon>inicio1.Master</DependentUpon>
+    </Compile>
+    <Compile Include="login.aspx.cs">
+      <DependentUpon>login.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="login.aspx.designer.cs">
+      <DependentUpon>login.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site1.Master.cs">
       <DependentUpon>Site1.Master</DependentUpon>
@@ -114,13 +148,6 @@
     </Compile>
     <Compile Include="Site1.Master.designer.cs">
       <DependentUpon>Site1.Master</DependentUpon>
-    </Compile>
-    <Compile Include="inicio.aspx.cs">
-      <DependentUpon>inicio.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="inicio.aspx.designer.cs">
-      <DependentUpon>inicio.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -136,6 +163,12 @@
       <DependentUpon>ATT2007DataSet.xsd</DependentUpon>
     </Content>
     <Content Include="images\MANUAL DE USUARIO SOFI.pdf" />
+    <Content Include="inicio1.Master" />
+    <Content Include="layout\styles\fonts\fontawesome-webfont.eot" />
+    <Content Include="layout\styles\fonts\fontawesome-webfont.ttf" />
+    <Content Include="layout\styles\fonts\fontawesome-webfont.woff" />
+    <Content Include="layout\styles\fonts\fontawesome-webfont.woff2" />
+    <Content Include="layout\styles\fonts\FontAwesome.otf" />
     <None Include="Properties\PublishProfiles\servidor_de_aplicaciones.pubxml" />
     <None Include="Properties\PublishProfiles\sof-i.pubxml" />
     <None Include="Properties\PublishProfiles\sofi.pubxml" />
@@ -147,6 +180,7 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
