Modificación completa de todo el frontend, se colocaron formularios públicos y privados protegidos por loguin.

--- a/SOFI/Web.config
+++ b/SOFI/Web.config
@@ -33,6 +33,57 @@
         <add assembly="System.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
       </assemblies>
     </compilation>
+
+    <!--
+     *******************************************
+     AUTENTICACIÓN PARA LOS FORMULARIOS PRIVADOS
+     *******************************************
+    -->
+    <authentication mode="Forms">
+      <forms cookieless="AutoDetect" defaultUrl="inasis_diaria.aspx" loginUrl="login.aspx" name="sof-i" path="/" protection="All" timeout="10">
+        <credentials>
+          <user name="admin" password="admin"/>
+          <user name="sof-i" password="sof-i"/>
+        </credentials>
+      </forms>
+    </authentication>
+        
+    <!--
+     *********************************
+     ACCESO A LOS FORMULARIOS PÚBLICOS
+     *********************************
+    -->
+    <authorization>
+      <allow users="*"/>
+    </authorization>
   </system.web>
+    
+  <!--
+    ******************************
+    PÁGINAS O DIRECTORIOS PRIVADOS
+    ******************************
+    -->
+  <location path="inasis_diaria.aspx">
+    <system.web>
+      <authorization>
+        <deny users="?"/>
+      </authorization>
+    </system.web>
+  </location>
+  <location path="inasis_quincenal.aspx">
+    <system.web>
+      <authorization>
+        <deny users="?"/>
+      </authorization>
+    </system.web>
+  </location>
+  <location path="asign_estatus.aspx">
+    <system.web>
+      <authorization>
+        <deny users="?"/>
+      </authorization>
+    </system.web>
+  </location>
+    
   <system.webServer/>
 </configuration>
