--- a/SOFI/SOFI.csproj
+++ b/SOFI/SOFI.csproj
@@ -61,12 +61,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\ATT2007.mdb" />
+    <Content Include="asign_estatus.aspx" />
     <Content Include="busq_esp.aspx" />
     <Content Include="estilos.css" />
     <Content Include="images\01.jpg" />
     <Content Include="images\logo1.png" />
     <Content Include="images\SOFI.jpg" />
-    <Content Include="asign_estatus.aspx" />
     <Content Include="inasis_diaria.aspx" />
     <Content Include="inasis_quincenal.aspx" />
     <Content Include="inicio.aspx" />
@@ -87,24 +87,25 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ATT2007DataSet.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>ATT2007DataSet.xsd</DependentUpon>
-    </Compile>
-    <Compile Include="busq_esp.aspx.cs">
-      <DependentUpon>busq_esp.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="busq_esp.aspx.designer.cs">
-      <DependentUpon>busq_esp.aspx</DependentUpon>
-    </Compile>
     <Compile Include="asign_estatus.aspx.cs">
       <DependentUpon>asign_estatus.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="asign_estatus.aspx.designer.cs">
       <DependentUpon>asign_estatus.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="ATT2007DataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ATT2007DataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Autentificacion.cs" />
+    <Compile Include="busq_esp.aspx.cs">
+      <DependentUpon>busq_esp.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="busq_esp.aspx.designer.cs">
+      <DependentUpon>busq_esp.aspx</DependentUpon>
     </Compile>
     <Compile Include="inasis_diaria.aspx.cs">
       <DependentUpon>inasis_diaria.aspx</DependentUpon>
@@ -141,14 +142,14 @@
     <Compile Include="login.aspx.designer.cs">
       <DependentUpon>login.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Site1.Master.cs">
-      <DependentUpon>Site1.Master</DependentUpon>
+    <Compile Include="orh.Master.cs">
+      <DependentUpon>orh.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Site1.Master.designer.cs">
-      <DependentUpon>Site1.Master</DependentUpon>
+    <Compile Include="orh.Master.designer.cs">
+      <DependentUpon>orh.Master</DependentUpon>
     </Compile>
+    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="ATT2007DataSet.xsc">
@@ -169,10 +170,10 @@
     <Content Include="layout\styles\fonts\fontawesome-webfont.woff" />
     <Content Include="layout\styles\fonts\fontawesome-webfont.woff2" />
     <Content Include="layout\styles\fonts\FontAwesome.otf" />
+    <Content Include="orh.Master" />
     <None Include="Properties\PublishProfiles\servidor_de_aplicaciones.pubxml" />
     <None Include="Properties\PublishProfiles\sof-i.pubxml" />
     <None Include="Properties\PublishProfiles\sofi.pubxml" />
-    <Content Include="Site1.Master" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
