Se agregó el módulo de asistencia con fecha y hora del personal.

--- a/SOFI/Web.config
+++ b/SOFI/Web.config
@@ -84,6 +84,13 @@
       </authorization>
     </system.web>
   </location>
+  <location path="asistencias.aspx">
+    <system.web>
+      <authorization>
+        <deny users="?"/>
+      </authorization>
+    </system.web>
+  </location>
     
   <system.webServer/>
 </configuration>
