--- a/SOFI/SOFI.csproj
+++ b/SOFI/SOFI.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Content Include="App_Data\ATT2007.mdb" />
     <Content Include="asign_estatus.aspx" />
+    <Content Include="asistencias.aspx" />
     <Content Include="busq_esp.aspx" />
     <Content Include="estilos.css" />
     <Content Include="images\01.jpg" />
@@ -93,6 +94,13 @@
     </Compile>
     <Compile Include="asign_estatus.aspx.designer.cs">
       <DependentUpon>asign_estatus.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="asistencias.aspx.cs">
+      <DependentUpon>asistencias.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="asistencias.aspx.designer.cs">
+      <DependentUpon>asistencias.aspx</DependentUpon>
     </Compile>
     <Compile Include="ATT2007DataSet.Designer.cs">
       <AutoGen>True</AutoGen>
