--- a/SOFI/Web.config
+++ b/SOFI/Web.config
@@ -57,12 +57,21 @@
       <allow users="*"/>
     </authorization>
   </system.web>
-    
+
   <!--
     ******************************
     PÁGINAS O DIRECTORIOS PRIVADOS
     ******************************
     -->
+  <location path="imagenes" >
+    <system.web>
+      <authorization>
+        <deny users="*"/>
+      </authorization>
+    </system.web>
+  </location>
+  
+  
   <location path="inasis_diaria.aspx">
     <system.web>
       <authorization>
@@ -85,6 +94,13 @@
     </system.web>
   </location>
   <location path="asistencias.aspx">
+    <system.web>
+      <authorization>
+        <deny users="?"/>
+      </authorization>
+    </system.web>
+  </location>
+  <location path="editar_usuario.aspx">
     <system.web>
       <authorization>
         <deny users="?"/>
